--- a/css/gumby.css
+++ b/css/gumby.css
@@ -1681,3 +1681,25 @@ table.rounded thead th, table.rounded thead td, table.rounded caption + tbody tr
 .ie8 .ttip:hover:before, .ie8 .ttip:hover:after { display: block; }
 
 .ie9 .radio.checked i, .ie9 .checkbox.checked i { top: 0; }
+
+.super_wrapper { min-height: 100%; height: auto !important; /* IE6 support */ height: 100%; margin: 0 auto -3em; /* the bottom margin is the negative value of the footer's height */ }
+
+.social { text-color: white; }
+
+.btn.twitter { background: #00aced; border: 1px solid #00aced; }
+.btn.twitter :hover { background: #21c2ff; }
+
+.btn.linkedin { background: #0077b5; border: 1px solid #0077b5; }
+.btn.linkedin :hover { background: #0089d1; }
+
+.btn.gplus { background: #c63d2d; border: 1px solid #c63d2d; }
+.btn.gplus :hover { background: #e84c3A; }
+
+.wrapper.shaded { background-color: #E9E9E9 !important; padding-top: 10px; padding-bottom: 10px; }
+
+.navcontain { height: 60px; }
+
+@media only screen and (max-width: 768px) { .navcontain { height: 60px; } }
+.text_center { text-align: center; }
+
+.footer, .push { height: 3em; }
