--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -64,13 +64,12 @@
   height: 4em;
 }
 
-a.red_glow {
-  :hover {
-    text-shadow: 0 0 0.5px #ff4A64;
-  }
-}
+// anchors
 
 .default_color {
   color: #555555;
 }
+
+a:hover { color: #c03d20; }
+a:hover.red_glow { text-shadow: 0 0 0.5px #ff4A64; }
 
