--- a/css/gumby.css
+++ b/css/gumby.css
@@ -1706,6 +1706,4 @@ table.rounded thead th, table.rounded thead td, table.rounded caption + tbody tr
 
 .default_color { color: #555555; }
 
-a:hover { color: #c03d20; }
-
-a:hover.red_glow { text-shadow: 0 0 0.5px #ff4A64; }
+a:hover.red_glow { color: #c03d20; text-shadow: 0 0 0.5px #ff4A64; }
