Some more updates.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<!-- copyright footer : start -->
+<!-- copyright footer -->
 <div class="wrapper shaded footer">
   <div class="row">
   <div class="pull_left">
@@ -9,7 +9,6 @@
   </div>
   </div>
 </div>
-<!-- copyright footer : end -->
 
 <!-- Grab Google CDN's jQuery, fall back to local if offline -->
 <!-- 2.0 for modern browsers, 1.10 for .oldie -->
