--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<!-- navbar -->
+<!--navbar-->
 <div class="navcontain">
   <div class="navbar" gumby-fixed="top" id="nav1">
   <div class="row">
@@ -28,13 +28,12 @@
   </div>
   </div>
 </div>
-<!-- navbar -->
 
-<!-- social -->
+<!--social-->
 <div class="wrapper shaded">
 <div class="row">
   <div class="metro btn default rounded pull_left">
-    <a href="{{ resume_loc }}">Resume <i class="icon-download"></i></a>
+    <a href="{{ site.resume_url }}">Resume <i class="icon-download"></i></a>
   </div>
   <div class="metro btn gplus pull_right">
     <a target="_blank" href="https://plus.google.com/u/0/{{ site.gplus_handle }}">
@@ -54,4 +53,3 @@
   </div>
 </div>
 </div>
-<!-- social -->
