--- a/_includes/stochss.html
+++ b/_includes/stochss.html
@@ -24,7 +24,8 @@
       <a class="default_color red_glow" href="{{ site.ucsb_url }}">UC Santa Barbara</a></h6>
   </div>
   <div class="padding_top_10">
-    <p>StochSS is a NIH funded project whose aim is to provide an integrated development environment (IDE) for running discrete stochastic simulations of biochemical networks and population systems in cloud somputing environments. </p>
+    <p>StochSS is a NIH funded project whose aim is to provide an integrated development environment (IDE) for running discrete stochastic simulations of biochemical networks and population systems in cloud somputing environments.
+    [<a class="red_glow" href="{{ site.stochss_pub_url }}"> publication </a>]</p>
 
     <ul class="square">
       <li>Built a generic cloud computing framework for configuring virtual machines and auto-deploying/managing arbitrary scientific simulation programs in the cloud by wrapping the source code as a web service.</li>
