--- a/_includes/google.html
+++ b/_includes/google.html
@@ -4,7 +4,7 @@
   <div style="padding-top:0px">
     <h5 class="text_center">
       <a class="default_color red_glow" href="http://www.google.com/">
-        <i class="icon-globe"></i>Google Inc.
+        <i class="icon-globe"></i>Google LLC
       </a>
     </h5>
   </div>
@@ -12,7 +12,7 @@
 <article class="nine columns">
   <div class="row">
     <h3><strong>Google Shopping Ads:</strong> Serving Infrastructure</h3>
-    <h5>Software Engineer, <a class="red_glow" href="http://www.google.com">Google Inc.</a></h5>
+    <h5>Software Engineer, <a class="red_glow" href="http://www.google.com">Google LLC</a></h5>
     <h6>August 2015 - Present</h6>
   </div>
   <div class="padding_top_10">
