--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,23 +8,6 @@
       <img alt="Dev Nath" src="img/devnath_logo.png" gumby-retina="">
       </a>
     </h1>
-    <ul class="eight columns main-nav">
-      <li class="pull_right padding_left_20">
-        <p class="medium pretty default btn icon-github icon-left">
-          <a target="_blank" href="https://github.com/{{ site.github_username }}">GitHub</a>
-        </p>
-      </li>
-      {% if page.title == "Projects" %}
-      <li class="pull_right"><a href="#">Projects</a></li>
-      {% else %}
-      <li class="pull_right"><a href="projects.html">Projects</a></li>
-      {% endif %}
-      {% if page.title == "Homepage" %}
-      <li class="pull_right"><a href="#">Home</a></li>
-      {% else %}
-      <li class="pull_right"><a href="index.html">Home</a></li>
-      {% endif %}
-    </ul>
   </div>
   </div>
 </div>
@@ -35,9 +18,9 @@
   <div class="metro btn default rounded pull_left">
     <a href="{{ site.resume_url }}">Resume <i class="icon-download"></i></a>
   </div>
-  <div class="metro btn gplus pull_right">
-    <a target="_blank" href="https://plus.google.com/u/0/{{ site.gplus_handle }}">
-      <i class="social icon-gplus"></i><span class="hide">Google+ | {{ site.fullname }}</span>
+  <div class="metro btn instagram pull_right">
+    <a target="_blank" href="https://plus.google.com/u/0/{{ site.instagram_username }}">
+      <i class="social icon-instagram"></i><span class="hide">Instagram | {{ site.fullname }}</span>
     </a>
   </div>
   <div class="metro btn linkedin pull_right">
