--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,13 @@
       <img alt="Dev Nath" src="img/devnath_logo.png" gumby-retina="">
       </a>
     </h1>
+    <ul class="eight columns main-nav">
+      <li class="pull_right padding_left_20">
+        <p class="medium pretty default btn icon-github icon-left">
+          <a target="_blank" href="https://github.com/{{ site.github_username }}">GitHub</a>
+        </p>
+      </li>
+    </ul>
   </div>
   </div>
 </div>
