--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
     <a href="{{ site.resume_url }}">Resume <i class="icon-download"></i></a>
   </div>
   <div class="metro btn instagram pull_right">
-    <a target="_blank" href="https://plus.google.com/u/0/{{ site.instagram_username }}">
+    <a target="_blank" href="https://www.instagram.com/{{ site.instagram_username }}">
       <i class="social icon-instagram"></i><span class="hide">Instagram | {{ site.fullname }}</span>
     </a>
   </div>
