--- a/_includes/twitter_timeline.html
+++ b/_includes/twitter_timeline.html
@@ -1,4 +1,4 @@
-<div class="four columns padding_top_20 text_center">
+<div class="padding_top_20 text_center">
 <a class="twitter-timeline" width="360" height="720" href="https://twitter.com/{{ site.twitter_username }}" data-widget-id="287681856625836032">Tweets by @{{ site.twitter_username }}</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];
