--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,4 +28,14 @@
 
 <script src="bower_components/gumby/js/libs/modernizr-2.6.2.min.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QYXDZ2CN9B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QYXDZ2CN9B');
+</script>
+
 <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
