--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,16 @@
-td {
-  vertical-align:top;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.img-me {
+  width: 100%;
+}
+
+ul {
+  margin-left: 25px;
+}
+
+p {
+  margin: 10px;
 }
