--- a/style/style.css
+++ b/style/style.css
@@ -3,14 +3,107 @@
   padding: 0;
 }
 
-.img-me {
+.info {
   width: 100%;
 }
 
-ul {
-  margin-left: 25px;
+.article-info h2 {
+  padding: 30px 30px 20px;
+  font-family: serif;
+  font-size: 45px;
+  color: #111;
+  line-height: 40px;
 }
 
-p {
-  margin: 10px;
+.article-info h3 {
+  padding: 10px 30px 20px;
+  font-family: serif;
+  font-size: 24px;
+  color: #111;
+  line-height: 20px;
+}
+
+.article-info p {
+  padding: 0px 30px 20px;
+  font-family: serif;
+  font-size: 16px;
+  color: #111;
+  line-height: 22px;
+}
+
+.article-info ul {
+  padding: 0px 30px 20px;
+  margin-left: 15px;
+}
+
+.img-me {
+  padding: 20px 0px 0px;
+  width: 100%;
+}
+
+/* Tablet */
+@media only screen and (min-width: 768px) {
+
+.info {
+  width: 600px;
+  margin: 0 auto;
+}
+
+.article-info h2 {
+  padding: 30px 0px 0px;
+}
+
+.article-info h3 {
+  padding: 20px 0px 0px;
+}
+
+.article-info p {
+  padding: 20px 0px 0px;
+}
+
+.article-info ul {
+  padding: 20px 0px 0px;
+}
+
+.img-me {
+  padding: 30px 0px 0px;
+}
+
+}
+
+/* Desktop */
+@media only screen and (min-width: 1000px) {
+
+.info {
+  width: 1000px;
+  margin: 0 auto;
+}
+
+.article-info {
+  width: 60%;
+  float: right;
+}
+
+.article-info h2 {
+  padding: 30px 0px 0px 30px;
+}
+
+.article-info h3 {
+  padding: 20px 0px 0px 30px;
+}
+
+.article-info p {
+  padding: 20px 0px 0px 30px;
+}
+
+.article-info ul {
+  padding: 20px 0px 0px 30px;
+}
+
+.img-me {
+  padding: 30px 0px 0px;
+  width: 40%;
+  float: left;
+}
+
 }
