--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,11 @@
 * {
   margin: 0;
   padding: 0;
+  background-color: #fefdfb;
+}
+
+:root {
+  /* color-scheme: light dark; */
 }
 
 .info {
@@ -11,7 +16,6 @@
   padding: 30px 30px 20px;
   font-family: serif;
   font-size: 45px;
-  color: #111;
   line-height: 40px;
 }
 
@@ -19,7 +23,6 @@
   padding: 10px 30px 20px;
   font-family: serif;
   font-size: 24px;
-  color: #111;
   line-height: 20px;
 }
 
@@ -27,7 +30,6 @@
   padding: 0px 30px 20px;
   font-family: serif;
   font-size: 16px;
-  color: #111;
   line-height: 22px;
 }
 
